@@ -199,6 +199,26 @@ namespace TAO {
   }
 
   template <typename stream, CORBA::ULong MAX>
+  bool demarshal_sequence(stream & strm, TAO::bounded_value_sequence <CORBA::LongLong, MAX> & target) {
+    typedef TAO::bounded_value_sequence <CORBA::LongLong, MAX> sequence;
+    ::CORBA::ULong new_length = 0;
+    if (!(strm >> new_length)) {
+      return false;
+    }
+    if ((new_length > strm.length()) || (new_length > target.maximum ())) {
+      return false;
+    }
+    sequence tmp;
+    tmp.length(new_length);
+    typename sequence::value_type * buffer = tmp.get_buffer();
+    if (!strm.read_longlong_array (buffer, new_length)) {
+      return false;
+    }
+    tmp.swap(target);
+    return true;
+  }
+
+  template <typename stream, CORBA::ULong MAX>
   bool demarshal_sequence(stream & strm, TAO::bounded_value_sequence <CORBA::ULongLong, MAX> & target) {
     typedef TAO::bounded_value_sequence <CORBA::ULongLong, MAX> sequence;
     ::CORBA::ULong new_length = 0;
@@ -411,6 +431,15 @@ namespace TAO {
       return false;
     }
     return strm.write_double_array (source.get_buffer (), length);
+  }
+
+  template <typename stream, CORBA::ULong MAX>
+  bool marshal_sequence(stream & strm, const TAO::bounded_value_sequence <CORBA::LongLong, MAX> & source) {
+    ::CORBA::ULong const length = source.length ();
+    if (!(strm << length)) {
+      return false;
+    }
+    return strm.write_longlong_array (source.get_buffer (), length);
   }
 
   template <typename stream, CORBA::ULong MAX>
